No code style for HTML

--- a/tmpl/live-html-tmpl.html
+++ b/tmpl/live-html-tmpl.html
@@ -25,7 +25,7 @@
                   </div>
               </div>
               <div id="output-container">
-                  <div id="output" class="output"><code></code></div>
+                  <div id="output" class="output"></div>
               </div>
         </div>
       </section>
