Revert "Adds next iteration of the HTML interactive editor (#576)"
This reverts commit 432e90b7c71b3a57bb5222128ee7f4f8bba1a180.

--- a/live-examples/html-examples/table.html
+++ b/live-examples/html-examples/table.html
@@ -1,18 +1,17 @@
 <table>
     <thead>
         <tr>
-            <th colspan="2">This is the table header</th>
+            <th>This is the table header</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>This is the table body</td>
-            <td>with two columns</td>
         </tr>
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="2">This is the table footer</td>
+            <td>This is the table footer</td>
         </tr>
     </tfoot>
 </table>
