--- a/tmpl/live-html-tmpl.html
+++ b/tmpl/live-html-tmpl.html
@@ -13,7 +13,7 @@
       <header class="output-header hidden">
         <h4>%title%</h4>
         <button id="reset" class="reset" type="button">Reset</button>
-        <button id="run" class="run" type="button">Run &rsaquo;</button>
+        <button id="run" class="run" type="button">Run</button>
       </header>
       <section class="editor-container">
 <div id="html-editor" class="editor-wrapper"><pre><code>%example-code%</pre></code></div>
